[Technique] Refactor test context